# ros_adapter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsRos.txt  DTZ_LagerDemo.cpp  README.md  ROS+MoveIt!  Stretching.cpp  bashline.txt  demonstrator_start.sh  demonstrator_start.txt  dtz_robot_message.pb.cc  dtz_robot_message.pb.h  dtz_robot_message.proto  dtz_robot_message_pb2.py  kick_off_event.cpp  kick_off_event_x  kick_off_event_x.cpp  opc_ua_server_panda.py  opcua_ros_panda.py  package.xml  pick_and_place.cpp  requirements.txt
backup/: kick_off_event.cpp  kick_off_event_x.cpp
config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf
launch/: Stretching.launch  state_export.launch
ros_kafka_adapter/: README.md
ros_kafka_adapter/src/: instances.json  ros_kafka_adapter.py
scripts/: opc_ua_server_panda.py  ros_kafka_adapter.py
src/: Stretching.cpp  ds-mappings.json  instances.json  ros_kafka_adapter.py
systemd/: ros-frankastate.service  ros-kafka-adapter.service  roscore.service
